[project]
name = "push-to-outpost"
version = "0.1.0"
description = "Remote viewer for local AI agent sessions, tmux panes, and docs — pushed from your machine, no inbound connections"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]
license = { file = "LICENSE" }

[project.scripts]
outpost = "outpost.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["outpost"]

[tool.hatch.build.targets.sdist]
include = ["outpost/**"]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
